
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct udp_fifo_handle {int fds; } ;


 int AF_LOCAL ;
 int EXIT_FAILURE ;
 int SOCK_DGRAM ;
 int exit (int ) ;
 int perror (char*) ;
 int socketpair (int ,int ,int ,int ) ;

void udp_fifo_init(struct udp_fifo_handle* handle) {
 int rv = socketpair(AF_LOCAL, SOCK_DGRAM, 0, handle->fds);
 if (rv != 0) {
  perror("socketpair()");
  exit(EXIT_FAILURE);
 }
}
