; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41458.c_udp_fifo_init.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41458.c_udp_fifo_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.udp_fifo_handle = type { i32 }

@AF_LOCAL = common dso_local global i32 0, align 4
@SOCK_DGRAM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"socketpair()\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @udp_fifo_init(%struct.udp_fifo_handle* %0) #0 {
  %2 = alloca %struct.udp_fifo_handle*, align 8
  %3 = alloca i32, align 4
  store %struct.udp_fifo_handle* %0, %struct.udp_fifo_handle** %2, align 8
  %4 = load i32, i32* @AF_LOCAL, align 4
  %5 = load i32, i32* @SOCK_DGRAM, align 4
  %6 = load %struct.udp_fifo_handle*, %struct.udp_fifo_handle** %2, align 8
  %7 = getelementptr inbounds %struct.udp_fifo_handle, %struct.udp_fifo_handle* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @socketpair(i32 %4, i32 %5, i32 0, i32 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = call i32 @perror(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %14 = load i32, i32* @EXIT_FAILURE, align 4
  %15 = call i32 @exit(i32 %14) #3
  unreachable

16:                                               ; preds = %1
  ret void
}

declare dso_local i32 @socketpair(i32, i32, i32, i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
